dataset1235/2025-2/1153765216/users/3146567693/executions/2052804200_254684124.log
== SUBMISSION (2025-09-02 19:10:04)
-- CODE: 
idade = int(input("digite sua idade: "))
if idade >= 18:
  print(f"{idade}")
  print("Maior_de_idade")
else:
  print(f"{idade}")
  print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:06:57)
-- CODE: 
idade = int(input("digite sua idade: "))
if idade == 18:
  print(f"{idade}")
  print("maior_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
digite sua idade:
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
digite sua idade:
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
digite sua idade:
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
digite sua idade:
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:06:42)
-- CODE: 
idade = int(input("digite sua idade: "))
if idade == 18:
  print(f"{idade}")
  print("maior de idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
digite sua idade:
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
digite sua idade:
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
digite sua idade:
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior de idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
digite sua idade:
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior de idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:08:57)
-- CODE: 
idade = int(input("digite sua idade: "))
if idade >= 18:
  print(f"{idade}")
  print("maior_de_idade")
else:
  print(f"{idade}")
  print("menor de idade")
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor de idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor de idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:08:55)
-- CODE: 
idade = int(input("digite sua idade: "))
if idade >= 18:
  print(f"{idade}")
  print("maior_de_idade")
else:
  print(f"{idade}")
  print("menor de idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor de idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor de idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:08:31)
-- CODE: 
idade = int(input("digite sua idade: "))
if idade >= 18
  print(f"{idade}")
  print("maior_de_idade")
else
  print(f"{idade}")
  print("menor de idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 2
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 2
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 2
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 2
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 2
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 2
    if idade >= 18
                  ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:09:09)
-- CODE: 
idade = int(input("digite sua idade: "))
if idade >= 18:
  print(f"{idade}")
  print("maior_de_idade")
else:
  print(f"{idade}")
  print("menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:09:08)
-- CODE: 
idade = int(input("digite sua idade: "))
if idade >= 18:
  print(f"{idade}")
  print("maior_de_idade")
else:
  print(f"{idade}")
  print("menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
